--- a/backend/api/.env.example
+++ b/backend/api/.env.example
@@ -18,6 +18,7 @@ DB_PASSWORD=secret
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 SPOTIFY_REDIRECT_URI="http://localhost:8000/api/login"
+FRONTEND_URL=""
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
